# SynthV_Cracks

./: README.md
src/2.1.0/: CHANGELOG.txt  InstallVoicepeak.cmd  LICENSE.txt  OpenSVPatchDetour.cmd  README.txt  SVKeyDeviceID.cmd  StartVoicepeak.cmd  install-voicepeak.sh  jinpwnsoft.pub
src/2.1.0/misc/: CHANGELOG_utf8bom.txt  README_utf8bom.txt  jinpwnsoft-ca.cer  jinpwnsoft-ca.pem  libdtauth.js  nofs.hexpat  vpapi.py
src/2.1.0/source/: CMakeLists.txt  helper.c  helper.h  helper.rc  tool.cpp  tool.h  tool.manifest  tool.rc
src/2.1.0/source/JUCE/: CMakeLists.txt  LICENSE.txt
src/2.1.0/source/JUCE/modules/: CMakeLists.txt
src/2.1.0/source/JUCE/modules/juce_cryptography/encryption/: juce_RSAKey.cpp
src/2.1.0/source/fishhook/: LICENSE.txt
src/2.1.0/source/minhook/include/: MinHook.h
src/2.1.0/source/minhook/src/: hook.c  trampoline.c
src/2.1.0/source/zlib/: zconf.h
